Tenants refactored home_page redirects to tenants/ tenants posts to tenants/new
Tenant tests refactored
3 classes TenantPageTest, TenantViewTest and NewTenantTest

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
-* Code smell: POST test is too long
-* Display multiple items in the table
+* url /tenant/
+    /tenant/1/
+    /tenant/new
+    /tenant/add_item
 
